Add source of example

--- a/deep-dream.ipynb
+++ b/deep-dream.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Deep Dream"
+    "# Deep Dream\n",
+    "\n",
+    "Based on the examples from the book \"Deep Learning with Python\" by Francois Chollet. The original example as printed in the book can be found here: https://github.com/fchollet/deep-learning-with-python-notebooks/blob/master/8.2-deep-dream.ipynb\n",
+    "I have made some changes to play around with the parameters in loops."
    ]
   },
   {
