--- a/fundamental-haspax.ipynb
+++ b/fundamental-haspax.ipynb
@@ -1420,12 +1420,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# \"TIme \""
+    "# \"Time Series\" examples"
    ]
   },
   {
